# LabPlotter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_on_tag.yml
libs/: CMakeLists.txt
libs/qcustomplot/: qcustomplot.cpp  qcustomplot.h
libs/qcustomplot/examples/interactions/: interaction-example
src/: CMakeLists.txt  DataManager.cpp  DataManager.h  SourceManager.cpp  SourceManager.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui
src/dataInterface/: CharSeparatedParser.cpp  CharSeparatedParser.h  DataPoint.h  FileSource.cpp  FileSource.h  IDataParser.cpp  IDataParser.h  IDataSource.h  SerialPortSource.cpp  SerialPortSource.h
src/ui/: connectionPanel.ui  mainWindow.ui  serialPortConfig.ui
src/widgets/: connectionPanel.cpp  connectionPanel.h  serialPortConfig.cpp  serialPortConfig.h
